<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_close_activity"
                android:layout_width="@dimen/w_15"
                android:layout_height="@dimen/w_15"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/margin_5"
                android:layout_marginTop="@dimen/margin_5"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_close"
                android:tint="@color/Black" />

            <ImageView
                android:layout_width="@dimen/w_80"
                android:layout_height="@dimen/w_80"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_20"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_55"
                android:layout_marginRight="@dimen/margin_55"
                android:text="@string/login_form"
                android:textColor="@color/Black"
                android:textSize="@dimen/txt_20"
                android:textStyle="bold" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/w_10"
                android:layout_marginTop="@dimen/margin_5">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/w_1"
                    android:layout_centerVertical="true"
                    android:background="@color/black_65" />

                <View
                    android:layout_width="@dimen/w_30"
                    android:layout_height="@dimen/w_7"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/margin_55"
                    android:background="@drawable/bt_login" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_55"
                android:layout_marginRight="@dimen/margin_55"
                android:layout_marginTop="@dimen/margin_30"
                android:padding="@dimen/padding_5"
                android:text="@string/input_email_or_phone"
                android:textColor="@color/Black"
                android:textSize="@dimen/txt_15" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_marginRight="@dimen/margin_55"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/w_40"
                    android:layout_height="@dimen/w_40"
                    android:contentDescription="@string/app_name"
                    android:padding="@dimen/padding_5"
                    android:src="@mipmap/ic_launcher" />

                <EditText
                    android:id="@+id/et_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/et_login"
                    android:hint="@string/enter_your_username"
                    android:nextFocusDown="@+id/et_pw"
                    android:singleLine="true"
                    android:textColorHint="@color/hint_color"
                    android:textSize="@dimen/txt_15" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_55"
                android:layout_marginRight="@dimen/margin_55"
                android:layout_marginTop="@dimen/margin_20"
                android:padding="@dimen/padding_5"
                android:text="@string/input_password"
                android:textColor="@color/Black"
                android:textSize="@dimen/txt_15" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_marginRight="@dimen/margin_55"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/w_40"
                    android:layout_height="@dimen/w_40"
                    android:contentDescription="@string/app_name"
                    android:padding="@dimen/padding_5"
                    android:src="@mipmap/ic_launcher" />

                <EditText
                    android:id="@+id/et_pw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/et_login"
                    android:ellipsize="start"
                    android:hint="@string/enter_your_password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColorHint="@color/hint_color"
                    android:textSize="@dimen/txt_15" />
            </LinearLayout>

            <!--<CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_55"
                android:layout_marginRight="@dimen/margin_55"
                android:layout_marginTop="@dimen/margin_20"
                android:text="@string/remember_me"
                android:textColor="@color/remember_me" />-->

            <android.support.v7.widget.AppCompatCheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_55"
                android:layout_marginRight="@dimen/margin_55"
                android:layout_marginTop="@dimen/margin_20"
                android:text="@string/remember_me"
                android:textColor="@color/remember_me"
                app:buttonTint="@color/remember_me" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_55"
                android:layout_marginRight="@dimen/margin_55"
                android:layout_marginTop="@dimen/margin_20"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_forgot_pw"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/forgot_password"
                    android:textColor="@drawable/text_blue_black"
                    android:textSize="@dimen/txt_12" />

                <TextView
                    android:id="@+id/tv_dont_have_acc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/don_t_have_account"
                    android:textColor="@drawable/text_blue_black"
                    android:textSize="@dimen/txt_12" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/w_2"
                android:layout_marginTop="@dimen/margin_20" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_20"
                android:background="@drawable/bt_login"
                android:gravity="center"
                android:paddingBottom="@dimen/padding_5"
                android:paddingLeft="@dimen/padding_30"
                android:paddingRight="@dimen/padding_30"
                android:paddingTop="@dimen/padding_5"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:textColor="@color/White"
                android:textSize="@dimen/txt_18" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>

